# efm32pg12-hal

./: Cargo.toml  README.md  build.rs
examples/: gpio.rs  i2c.rs  serial.rs  serial_bridge.rs  serial_echo.rs
src/: cmu.rs  gpio.rs  i2c.rs  lib.rs  serial.rs  usart.rs  util.rs
