[package]
name = "efm32pg12-hal"
version = "0.1.0"
authors = ["Timo Kröger <timokroeger93@gmail.com>"]
edition = "2018"
description = "Hardware abstraction layer (HAL) for Silicon Labs EFM32PG12 microcontrollers"
keywords = ["embedded-hal", "efm32", "hal", "silabs"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/timokroeger/efm32pg12-hal"

[dependencies]
efm32pg12-pac = "0.3.0"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
nb = "0.1.2"

[dev-dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
rtt-target = { version = "0.2.2", features = ["cortex-m"] }

[features]
rt = ["efm32pg12-pac/rt"]
default = ["rt"]
